Labs/kubernetes_helm_Sonarqube/scripts/intput_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: sonarqube-sonarqube-12
 annotations:
  nginx.ingress.kubernetes.io/proxy-body-size: 64m
spec:
 ingressClassName: nginx
 rules:
   - host: sonarqube12.se.sonarlab.com
     http:
      paths:
       - pathType: Prefix
         backend:
           service:
             name: sonarqube-sonarqube-dce
             port:
              number: 8001
         path: /
 tls:
   - hosts:
     - sonarqube12.se.sonarlab.com
     secretName: se.sonarlab-com-cert-secret
